--- a/Rozwiazania.ipynb
+++ b/Rozwiazania.ipynb
@@ -130,6 +130,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.00203868063889270, 0.00760250335548637],\n",
+       "       [0.00760250335548637, 0.0192081458071090]], dtype=object)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from math import pi\n",
+    "\n",
+    "def multivariate_pdf(mean, cov, x, n):\n",
+    "    P,D = cov.diagonalize()\n",
+    "    B = P*(D**1/2)\n",
+    "    m1 = np.absolute(B*Transpose(B))**1/2\n",
+    "    m2 = (Transpose(B)**-1)*(B**-1)\n",
+    "    p = (1/(((2*pi)**n/2)*m1))*exp(-1/2*Transpose(x-mean)*m2*(x-mean))[0]\n",
+    "    return p\n",
+    "\n",
+    "\n",
+    "mean = Matrix([1, 1])\n",
+    "cov = Matrix([[3, 0.3], [0.3, 2]])\n",
+    "n=2\n",
+    "x=Matrix([1,2])\n",
+    "\n",
+    "\n",
+    "multivariate_pdf(mean,cov,x,n)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -138,21 +176,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.5"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5rc1"
   }
  },
  "nbformat": 4,
