poprawnienie zadania z zestawu 1

--- a/Rozwiazania.ipynb
+++ b/Rozwiazania.ipynb
@@ -130,48 +130,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.00203868063889270, 0.00760250335548637],\n",
-       "       [0.00760250335548637, 0.0192081458071090]], dtype=object)"
+       "Matrix([\n",
+       "[13.1438273351563],\n",
+       "[4.48785303087748]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from math import pi\n",
+    "import numpy as np\n",
+    "from sympy import *\n",
     "\n",
-    "def multivariate_pdf(mean, cov, x, n):\n",
+    "def multivariate_pdf(cov, mu, n):\n",
     "    P,D = cov.diagonalize()\n",
     "    B = P*(D**1/2)\n",
-    "    m1 = np.absolute(B*Transpose(B))**1/2\n",
-    "    m2 = (Transpose(B)**-1)*(B**-1)\n",
-    "    p = (1/(((2*pi)**n/2)*m1))*exp(-1/2*Transpose(x-mean)*m2*(x-mean))[0]\n",
-    "    return p\n",
+    "    mu_z = np.zeros(n)\n",
+    "    sigma_z = np.ones(n)\n",
+    "    normal_distribution = np.random.normal(mu_z, sigma_z)\n",
+    "    multivariate = B*Matrix(normal_distribution) + mu\n",
+    "    return multivariate\n",
     "\n",
-    "\n",
-    "mean = Matrix([1, 1])\n",
     "cov = Matrix([[3, 0.3], [0.3, 2]])\n",
-    "n=2\n",
-    "x=Matrix([1,2])\n",
+    "mu = Matrix([0.1, 0.2]) \n",
+    "n = 2\n",
     "\n",
-    "\n",
-    "multivariate_pdf(mean,cov,x,n)"
+    "multivariate_pdf(cov, mu, n)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
